# FinalproyectALSE

./: README.md
PROYECTO_CORRECTO/Proyect_ALSE/: CMakeLists.txt  base.db  db_local.cpp  db_local.h  formulario.cpp  formulario.h  main_app.cpp  main_app.h  main_app.ui  plataforma.cpp  plataforma.h  registro.h  usuario.h
Proyect_ALSE/: CMakeLists.txt  datos_test.cpp  datos_test.h  db_local.cpp  db_local.h  formulario.cpp  formulario.h  main.cpp  main_app.cpp  main_app.h  main_app.ui  paciente.cpp  paciente.h  registro.cpp  registro.h  usuario.cpp
Proyect_ALSE/doc/html/: _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  annotated.html  app_8cpp.html  class_datos__test-members.html  class_datos__test.html  class_db__local-members.html  class_db__local.html  class_ui_1_1formulario-members.html  class_ui_1_1formulario.html  class_ui_1_1main__app-members.html  class_ui_1_1main__app.html  class_ui_1_1plataforma-members.html  class_ui_1_1plataforma.html  class_ui_1_1registro-members.html  class_ui_1_1registro.html  class_ui__formulario-members.html  class_ui__formulario.html  class_ui__main__app-members.html  class_ui__main__app.html  class_ui__plataforma-members.html  class_ui__plataforma.html  class_ui__registro-members.html  class_ui__registro.html  classes.html  classformulario-members.html  classformulario.html  classmain__app-members.html  classmain__app.html  (+100 more)
Proyect_ALSE_final/Proyect_ALSE/: app.cpp  db_local.cpp  formulario.cpp  formulario.ui  paciente.cpp  paciente.h  plataforma.cpp  plataforma.h  plataforma.ui  registro.ui  usuario.cpp  usuario.h
(+189 files in other folders)
